#lambdass>, @> instanceof, console.os, powershell

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 application {
-    mainClassName = 'fusy.Main'
+    mainClassName = 'fusy.Fusy'
 }
 
 plugins.withType(JavaPlugin).configureEach {
